Version 0.0.4 (not yet released):
- CVL: Reorganization:
  - Move inline functions to header files (with "extern inline").
  - Remove cvl.c, and compile the modules one by one, as it should be.
- CVL: remove cvl.pc (pkg-config file) and the cvl-config.script. Provide
  a new cvl.m4 file with a AM_LIBCVL macro that is based on
  AC_LIB_HAVE_LINKFLAGS.
- Improvements for the build system:
  - Quote arguments of M4 macros.
  - Use AC_LIB_HAVE_LINKFLAGS to detect libraries. Do not use *-config scripts
    or pkg-config. This avoids problems that are reported in this thread:
    http://thread.gmane.org/gmane.comp.encryption.gpg.gnutls.devel/
    1610/focus=1610 .
- CVL: Various cleanups, minor fixes, and additional cvl_assert() calls.
- CVL: Fix for cvl_skeleton3d(), memory savings for cvl_skeleton() and 
  cvl_skeleton3d().
- CVL: Add functions cvl_field_array() and cvl_field_const_array() to access 
  the raw array data of a field.
- Minor documentation improvements.

Version 0.0.3:
- Gnulib update.
- CVL: Remove cvl_field_ref*() functions.
- CVL: Switched optical flow functions from double to float.
- CVL: Switched color functions from double to float.
- CVL: Switched vector functions from double to float.
- CVL: Switched the cvl_edge_* functions to use floats instead of doubles.
- CVL: Added cvl_iroundf() to round floats.
- CVL: Simplify cvl_io_eof(). Remove obsoleted cvl_field_stream_eof().
- cvtool: Added a mat command as an interface to cvl_mat() and cvl_mat3d().
- CVL: Added cvl_mat() and cvl_mat3d() to compute the Medial Axis Transform 
  (MAT).
- cvtool: Added a skeleton command as an interface to cvl_skeleton() and 
  cvl_skeleton3d().
- CVL: Added cvl_skeleton() and cvl_skeleton3d() to compute skeletons.
- cvtool: Added a fieldconv command that converts between fields and frames.
- CVL: Added cvl_wrap() and cvl_clamp() for wrapped and clamped indexing.
- CVL: Fixed cvl_reflect(): avoid arithmetic overflow if bound > INT_MAX / 2.