@@ -1,6 +1,5 @@
 AC_DEFUN([ngl_INIT],
 [
-  ngl_FUNC_C99MATH
   ngl_FUNC_ISBLANK
   ngl_FUNC_FSEEKO
 ])
